<resources>
    <string name="app_name">SnipBack</string>
    <string name="intro_screenone_label_one">WELCOME TO SNIPBACK</string>
    <string name="intro_screenone_label_two">THE WORLD"’"S MOST POWERFUL\nRECORD BUTTON</string>
    <string name="intro_screenone_label_three">SnipBack is loaded with over 40+ features,\nbut one of the most innovative features is the \nability to record into the PAST.</string>
    <string name="intro_screenone_label_four">Whether it’s going back and adding missed\n
        footage from the beginning of an event,
        or \n just waiting for the action to happen first \nand
        then using our exclusive QuickBack \nfeature to go back and get it, SnipBack has\n you covered.</string>
    <string name="quic_backbutton">QUICKBACK \nBUTTON</string>
    <string name="next_pagelabel">Tap Button or \nSwipe Left on screen.</string>
    <string name="intro_screentwo_label_one">INNOVATIVE EDITOR</string>
    <string name="intro_screentwo_label_two">After capturing some great video,
        our \npatented editor, with its simple “set begin set \nend” method,
        makes creating highlight reels\n ridiculously simple.
        You can seamlessly \nextract unwanted segments,
        specify highlight \nzones,
        and even apply slow-mo/speed-up\n effects…all easier than ever before.</string>
    <string name="intro_screentwo_label_three">PLAYER OPTIONS</string>
    <string name="intro_screentwo_label_four">Editor, Tagging, Capture,\n Sharing, Delete</string>
    <string name="intro_screentwo_label_five">EDITOR OPTIONS</string>
    <string name="intro_screenthree_label_one">SNAPBACK PHOTOS</string>
    <string name="intro_screenthree_label_two">Leveraging our exclusive SnipBack \ntechnology,
        taking perfect photos has never\n been easier.</string>
    <string name="intro_screenthree_label_three">Our SnapBack Photos feature essentially \nenables you to
        take pictures in the past.
        And \nit’s really simple…just hold up your camera, \nmake your poses, then tap our SnapBack \nbutton.</string>
    <string name="intro_screenthree_label_four">SnipBack will then let you scan the last 10 \nseconds
        for the best pics! </string>
    <string name="intro_screenthree_label_five">SNIPBACK \nBUTTON </string>
    <string name="intro_screenthree_label_six">Tap Button or \nSwipe Right on screen.</string>
    <string name="intro_screenfour_label_one">Great overview video covering \nQuickBack,
        QuickBack+, On-the-Fly \nTagging, and SnapBack Photos.</string>
    <string name="intro_screenfour_label_2">Great overview video covering \nQuickBack,
        QuickBack+, On-the-Fly \nTagging, and SnapBack Photos.</string>
    <string name="intro_screenfour_label_3">How to use our QuickBack feature to \ncapture great highlights,
        and then \neasily merge them together to create \na great highlight video.</string>
    <string name="intro_screenfour_label_4">Use QuickBack+ to capture exactly \nwhat you want, nothing more, nothing \nless.</string>
    <string name="intro_screenfour_label_5">Use our On-the-Fly tagging to add \ntags, including audio tags that can \nplay before/after your video.
        Plus, how\n to extend QuickBacks.</string>
    <string name="intro_screenfour_label_6">Use SnapBack Photos to easily \ncapture the best pics.
        This video \nshows you how to use this feature to \ncapture the best selfies.</string>
    <string name="intro_screenfour_label_7">Tap Button or \nSwipe Right on screen.</string>
    <string name="intro_screenfour_label_8">Tap Button or \nSwipe Right on screen.</string>

    <string name="include"><![CDATA[● Highlight Reel Creator\n● Cut Zone - Cut Out Unwanted Video\n● Add SlowMo & SpeedUp Zones\n● All Future Features Included\n● No Ads]]></string>
    <string name="soon">● Crop Video for Social Media \n● Add Background Music \n● Add Voiceover</string>
    <string name="register">●  REGULAR UPDATES\n●  ACCESS FUTURE FEATURES\n●  SPECIAL INCENTIVES\n●  ACCESS PROMOTIONS\n●  FREE GIVEAWAYS\n●  STAY INFORMED</string>

    <string name="savevideo">Remember, If you tap on <b>"'"Save \nthe video"'"</b> button, the ORIGINAL video will \noverwrite with this. You can save it as a \nnew video, tap  <b>"'"Save As "'"</b></string>
    <string name="temsandcondtions"><font color="#ffffff"> By continuing, you agree to SnipBack"'"s </font><font color="#E7263A">Terms \nof Service, Privacy Policy </font><font color="#ffffff"> and </font><font color="#E7263A"> Cookie Use.</font></string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="message_need_permission">Need Permissions</string>
    <string name="message_permission">This app needs permission to use this feature. You can grant them in app settings.</string>
    <string name="title_go_to_setting">GOTO SETTINGS</string>
    <string name="intro4_title">WATCH A TUTORIAL</string>
    <string name="intro4_tut_1_heading">Tutorial 1</string>
    <string name="intro4_tut_2_heading">Tutorial 2</string>
    <string name="intro4_tut_3_heading">Tutorial 3</string>
    <string name="intro4_tut_4_heading">Tutorial 4</string>
    <string name="intro4_tut_5_heading">Tutorial 5</string>
    <string name="intro4_tut_6_heading">Tutorial 6</string>
    <string name="watch_later">WATCH LATER</string>
    <string name="don_t_show_again">Don\'t Show Again</string>
    <string name="pause_btn">Pause Button</string>
    <string name="play_btn">Play Button</string>
    <string name="no_desc"> </string>
    <string name="share_later">SHARE LATER</string>

    <string name="dialog_confirm_exit_without_saving">Please save the changes before you leave. Do you want to continue without saving?</string>
    <string name="dialog_confirm_title">Confirmation</string>
    <string name="dialog_processing">Processing</string>
    <string name="dialog_btn_overwrite">OVERWRITE</string>
    <string name="dialog_btn_save_as">SAVE AS NEW VERSION</string>
    <string name="dialog_btn_cancel">CANCEL</string>
    <string name="dialog_btn_keep_vid">KEEP VIDEO</string>
    <string name="dialog_btn_discard_vid">DISCARD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>