<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/intro_screenone_label_one"
        android:textColor="@color/colorPrimaryRed"
        android:gravity="center"
        android:textSize="18dp"
        android:fontFamily="@font/barlow_bold"
        android:layout_marginTop="46dp"
        android:id="@+id/label1"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label2"
        android:text="@string/intro_screenone_label_two"
        android:textColor="@color/colorPrimaryWhite"
        android:gravity="center"
        android:textSize="18dp"
        android:fontFamily="@font/barlow_bold"
        android:layout_below="@+id/label1"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        android:id="@+id/label3"
        android:text="@string/intro_screenone_label_two"
        android:textColor="@color/colorPrimaryWhite"
        android:gravity="center"
        android:fontFamily="@font/barlow_lightitalic"
        android:layout_marginTop="15dp"
        android:textSize="15dp"
        android:layout_below="@+id/label2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label4"
        android:text="@string/intro_screenone_label_four"
        android:textColor="@color/colorPrimaryWhite"
        android:fontFamily="@font/barlow_lightitalic"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_below="@+id/label3"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label4"
        android:layout_marginTop="25dp"
        android:id="@+id/layout_buttons"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_record_panel"/>

    </LinearLayout>
    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/layout_buttons"
        android:layout_marginLeft="130dp"
        android:src="@drawable/ic_turn"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quic_backbutton"
        android:textColor="@color/colorPrimaryWhite"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="30dp"
        android:id="@+id/backbutton"
        android:fontFamily="@font/barlow_bold"
        android:layout_below="@+id/layout_buttons"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_pagelabel"
        android:textColor="@color/colorPrimaryWhite"
        android:gravity="center"
        android:textSize="18dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:fontFamily="@font/barlow_lightitalic"
        android:layout_below="@+id/backbutton"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="30dp">
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:background="@drawable/rec_button"/>
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/round_white"/>
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/round_white"/>
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginLeft="14dp"
        android:background="@drawable/round_white"/>


    </LinearLayout>


</RelativeLayout>