<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/label1"
        android:gravity="center"
        android:fontFamily="@font/barlow_bold"
        android:textSize="18dp"
        android:textColor="@color/colorPrimaryWhite"
        android:text="@string/intro_screentwo_label_one"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label1"
        android:gravity="center"
        android:fontFamily="@font/barlow_lightitalic"
        android:textSize="15dp"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimaryWhite"
        android:text="@string/intro_screentwo_label_two"
        android:id="@+id/label2"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="51dp"
        android:layout_marginTop="26dp"
        android:layout_below="@id/label2"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:background="@drawable/background_screen2_grey"
        android:gravity="center"
        android:id="@+id/layout_buttons">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="38.85dp"
            android:src="@drawable/ic_edit"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="38.85dp"
            android:src="@drawable/ic_edit_one"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="38.85dp"
            android:src="@drawable/ic_camera_diaphram"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="38.85dp"
            android:src="@drawable/ic_share"/>
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_delete"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_buttons"
        android:gravity="center"
        android:fontFamily="@font/barlow_bold"
        android:textSize="15dp"
        android:layout_marginTop="27dp"
        android:textColor="@color/colorPrimaryWhite"
        android:text="@string/intro_screentwo_label_three"
        android:id="@+id/label3"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/label3"
        android:gravity="center"
        android:fontFamily="@font/barlow_lightitalic"
        android:textSize="15dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/colorPrimaryWhite"
        android:text="@string/intro_screentwo_label_four"
        android:id="@+id/label4"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/label4"
        android:gravity="center"
        android:padding="4dp"
        android:id="@+id/layout_images"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/background_screentwo_editer_image">
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
        android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
        android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>
        <ImageView
            android:layout_width="32.64dp"
            android:layout_height="27.18dp"
            android:src="@drawable/tony_hawk_new"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="28dp"
        android:id="@+id/layout_editor"
        android:layout_below="@+id/layout_images">
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:id="@+id/trim">
                <ImageView
                    android:layout_width="26dp"
                    android:layout_height="28dp"
                    android:src="@drawable/trim"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="EXTEND/TRIM"
                    android:textSize="8dp"
                    android:textColor="@color/colorDarkGreyDim"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginRight="20dp"
                android:id="@+id/cut"
                android:layout_toRightOf="@+id/trim">
                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="28dp"
                    android:src="@drawable/cut"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="CUT"
                    android:textSize="8dp"
                    android:textColor="@color/colorDarkGreyDim"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:id="@+id/highlight"
                android:layout_toRightOf="@+id/cut">
                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="28dp"
                    android:src="@drawable/trim"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="HIGHLIGHT"
                    android:textSize="8dp"
                    android:textColor="@color/colorDarkGreyDim"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginRight="20dp"
                android:orientation="vertical"
                android:id="@+id/slow"
                android:layout_toRightOf="@+id/highlight">
                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="28dp"
                    android:src="@drawable/slow"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SLOW"
                    android:textSize="8dp"
                    android:textColor="@color/colorDarkGreyDim"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical"
                android:id="@+id/speed"
                android:layout_toRightOf="@+id/slow">
                <ImageView
                    android:layout_width="38dp"
                    android:layout_height="28dp"
                    android:src="@drawable/speed"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="SPEED"
                    android:textSize="8dp"
                    android:textColor="@color/colorDarkGreyDim"/>
            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout_editor"
        android:gravity="center"
        android:layout_marginTop="56dp"
        android:fontFamily="@font/barlow_bold"
        android:textSize="15dp"
        android:textColor="@color/colorPrimaryWhite"
        android:text="@string/intro_screentwo_label_five" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/botton_nodes"
        android:gravity="center"
        android:layout_marginBottom="30dp">
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:background="@drawable/round_white"/>
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/rec_button"/>
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/round_white"/>
        <View
            android:layout_width="9dp"
            android:layout_height="9dp"
            android:layout_marginLeft="14dp"
            android:background="@drawable/round_white"/>

    </LinearLayout>

</RelativeLayout>